<resources>
    <string name="app_name">SolEj2_InterfazUser-ManejoConstraintLayout</string>
    <string name="label_type_here">Type here:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="mas">+</string>
    <string name="igual">=</string>
    <string name="borrar">C</string>
    <string name="cero">0</string>
    <string name="borrar_cuenta">BORRAR CUENTA</string>
    <string name="historial">HISTORIAL</string>
    <string name="info_cuenta">Información de la Cuenta</string>
    <string name="name_alejandra">Name: Alejandra</string>
    <string name="actualizaciones">Actualizaciones:</string>
    <string name="info_gps">Información de GPS</string>
    <string name="rb_treinta_minutos">Actualizar cada 30 minutos</string>
    <string name="rb_diez_minutos">Actualizar cada 10 minutos</string>
    <string name="pantalla_ayuda">PANTALLA AYUDA</string>
</resources>