<?xml version="1.0" encoding="utf-8"?>
<!-- Cómo hacerlo:
    Primero se coloca el verde centrado en horizontal y vertical y luego sobre él los de arriba y
    luego los de abajo y ya queda todo centrado sin hacer nada -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707">

    <TextView
        android:id="@+id/tvGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0CF105"
        android:padding="8dp"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:padding="8dp"
        android:text="@string/yellow"
        app:layout_constraintBottom_toTopOf="@+id/tvGreen"
        app:layout_constraintStart_toStartOf="@+id/tvGreen" />

    <TextView
        android:id="@+id/tvOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F7550A"
        android:padding="8dp"
        android:text="@string/orange"
        app:layout_constraintBottom_toTopOf="@+id/tvYellow"
        app:layout_constraintStart_toStartOf="@+id/tvYellow" />

    <TextView
        android:id="@+id/tvRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:padding="8dp"
        android:text="@string/red"
        app:layout_constraintBottom_toTopOf="@+id/tvOrange"
        app:layout_constraintStart_toStartOf="@+id/tvOrange" />

    <TextView
        android:id="@+id/tvBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1226DD"
        android:padding="8dp"
        android:text="@string/blue"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvGreen"
        app:layout_constraintTop_toBottomOf="@+id/tvGreen" />

    <TextView
        android:id="@+id/tvIndigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7504A6"
        android:padding="8dp"
        android:text="@string/indigo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvBlue"
        app:layout_constraintTop_toBottomOf="@+id/tvBlue" />

    <TextView
        android:id="@+id/tvViolet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F152E4"
        android:padding="8dp"
        android:text="@string/violet"
        app:layout_constraintStart_toStartOf="@+id/tvIndigo"
        app:layout_constraintTop_toBottomOf="@+id/tvIndigo" />

</androidx.constraintlayout.widget.ConstraintLayout>