<?xml version="1.0" encoding="utf-8"?>
<!-- Cómo hacerlo:
    Primer se coloca la columna de la derecha, empezando por el = que va centrado y pegados a la derecha. Y se crea una cadena vertical con ellos,
    poniendo su altura a 0dp (match_constraint).
    A continuación se coloca el botón 0 alineado a la izda pantalla y su derecha a la izda del botón C. Y pegado abajo con un margen de 8dp.
    Ahora se coloca el 7 alineado a la izquierda del 0 y por debajo enganchado al cero.
    Luego el 8 enganchado por arriba y abajo al 7 y por la izda al 7.
    Luego el 8 enganchado por arriba y abajo al 8 y por la derecha a la derecha del 0.
    Creamos una cadena horizontal entre el 7,8 y 9 y con ancho match_constraint para que estiren.
    Ahora lo mismo con la fila del 4,5 y 6.
    Lo mismo con la del 1,2 y 3.
    Y para finalizar crear cadena vertical entre el 2,5,8 y el 0



    -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B22A3">

    <Button
        android:id="@+id/bt5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cinco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt8"
        app:layout_constraintEnd_toEndOf="@+id/bt8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt8"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cuatro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt7"
        app:layout_constraintEnd_toEndOf="@+id/bt7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bt7"
        app:layout_constraintTop_toTopOf="@+id/bt5" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seis"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt5"
        app:layout_constraintEnd_toEndOf="@+id/bt9"
        app:layout_constraintStart_toEndOf="@+id/bt8"
        app:layout_constraintTop_toTopOf="@+id/bt5" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt5"
        app:layout_constraintEnd_toEndOf="@+id/bt5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt5"
        app:layout_constraintTop_toTopOf="@+id/btMas" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/uno"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt4"
        app:layout_constraintEnd_toEndOf="@+id/bt4"
        app:layout_constraintStart_toStartOf="@+id/bt4"
        app:layout_constraintTop_toTopOf="@+id/bt2" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tres"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt2"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintStart_toStartOf="@+id/bt6"
        app:layout_constraintTop_toTopOf="@+id/bt2" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="4dp"
        android:text="@string/ocho"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintEnd_toStartOf="@+id/bt9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt7"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nueve"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt8"
        app:layout_constraintEnd_toEndOf="@+id/bt0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt8"
        app:layout_constraintTop_toTopOf="@+id/bt8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/siete"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintEnd_toStartOf="@+id/bt8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/btIgual"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/igual"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMas"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btMas"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mas"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btIgual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/borrar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIgual"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cero"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btBorrar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt8" />
</androidx.constraintlayout.widget.ConstraintLayout>