<?xml version="1.0" encoding="utf-8"?>
<!-- Cómo hacerlo:
    Primero se coloca el verde a la derecha del todo y centrado verticalmente. Luego se colocan los de arriba
    del verde y los de abajo.
    Cuando estén todos ya en forma de escalera, se crea una cadena horizontal con el red, orange,yellow y green
    de tipo packed y listo -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707">

    <TextView
        android:id="@+id/tvGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0CF105"
        android:padding="8dp"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvYellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/tvRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:padding="8dp"
        android:text="@string/red"
        app:layout_constraintBottom_toTopOf="@+id/tvOrange"
        app:layout_constraintEnd_toStartOf="@+id/tvOrange"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:padding="8dp"
        android:text="@string/yellow"
        app:layout_constraintBottom_toTopOf="@+id/tvGreen"
        app:layout_constraintEnd_toStartOf="@+id/tvGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvOrange" />

    <TextView
        android:id="@+id/tvOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F7550A"
        android:padding="8dp"
        android:text="@string/orange"
        app:layout_constraintBottom_toTopOf="@+id/tvYellow"
        app:layout_constraintEnd_toStartOf="@+id/tvYellow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvRed" />

    <TextView
        android:id="@+id/tvBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1226DD"
        android:padding="8dp"
        android:text="@string/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvGreen"
        app:layout_constraintTop_toBottomOf="@+id/tvGreen" />

    <TextView
        android:id="@+id/tvViolet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F152E4"
        android:padding="8dp"
        android:text="@string/violet"
        app:layout_constraintEnd_toStartOf="@+id/tvIndigo"
        app:layout_constraintTop_toBottomOf="@+id/tvIndigo" />

    <TextView
        android:id="@+id/tvIndigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7504A6"
        android:padding="8dp"
        android:text="@string/indigo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvBlue"
        app:layout_constraintTop_toBottomOf="@+id/tvBlue" />

</androidx.constraintlayout.widget.ConstraintLayout>