<?xml version="1.0" encoding="utf-8"?>
<!-- Cómo hacerlo:
    Primer se coloca el 5 porque va centrado verticalmente.
    Luego se coloca el 4 alineado por arriba y abajo al 5 y pegado a la izda de la pantalla
    Ahora se le dice al 5 que va enganchado a la derecha del 4.
    Luego se coloca el 6 enganchado a la derecha de la pantalla y alineado arriba y abajo con el 5.
    Todos con el ancho en wrap_content.
    Ahora se crea una cadena horizontal con el 4,5 y 6 de tipo spread y se les cambia el ancho a 0dp para que estiren y ya estaría
    colocada la fila del medio.
    La fila de arriba y abajo se van encajando cada boton con el inmediantemente inferior y colocando siempre primero el central. Luego
    se crea una cadena vertical con el 2,5 y 8 y listo
    -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B22A3">

    <Button
        android:id="@+id/bt5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cinco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt8"
        app:layout_constraintEnd_toStartOf="@id/bt6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/bt4"
        app:layout_constraintTop_toBottomOf="@+id/bt2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cuatro"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt5"
        app:layout_constraintEnd_toStartOf="@+id/bt5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt5" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/seis"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt5"
        app:layout_constraintTop_toTopOf="@+id/bt5" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt5"
        app:layout_constraintEnd_toEndOf="@+id/bt5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/uno"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt2"
        app:layout_constraintEnd_toEndOf="@+id/bt4"
        app:layout_constraintStart_toStartOf="@+id/bt4"
        app:layout_constraintTop_toTopOf="@+id/bt2" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tres"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt2"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintStart_toStartOf="@+id/bt6"
        app:layout_constraintTop_toTopOf="@+id/bt2" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/siete"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt8"
        app:layout_constraintEnd_toEndOf="@+id/bt4"
        app:layout_constraintStart_toStartOf="@+id/bt4"
        app:layout_constraintTop_toTopOf="@+id/bt8" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ocho"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt5"
        app:layout_constraintTop_toBottomOf="@+id/bt5"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nueve"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt8"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintStart_toStartOf="@+id/bt6"
        app:layout_constraintTop_toTopOf="@+id/bt8" />
</androidx.constraintlayout.widget.ConstraintLayout>