<?xml version="1.0" encoding="utf-8"?>
<!--
    Primero se coloca abajo del todo la fila de botones poniendo ancho wrap_content. Cuando estén todos, creamos
    una cadena horizontal con ancho match_constraint y tipo spread.
    Después se hace la fila de BORRAR CUENTA E HISTORIAL con una cadena horizontal "spread_inside" y márgenes izdo y dcho de 24dp y enganchado arriba.

    -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010101">

    <ImageButton
        android:id="@+id/ibBrujula"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/ibShare"
        app:layout_constraintEnd_toStartOf="@+id/ibShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibShare"
        app:srcCompat="@drawable/bt_brujula" />

    <ImageButton
        android:id="@+id/ibConfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibLike"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibShare"
        app:layout_constraintTop_toBottomOf="@+id/btPantallaAyuda"
        app:srcCompat="@drawable/bt_config" />

    <ImageButton
        android:id="@+id/ibShare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/ibConfig"
        app:layout_constraintEnd_toStartOf="@+id/ibConfig"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ibBrujula"
        app:layout_constraintTop_toTopOf="@+id/ibConfig"
        app:srcCompat="@drawable/bt_share" />

    <ImageButton
        android:id="@+id/ibLike"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/ibConfig"
        app:layout_constraintEnd_toStartOf="@+id/ibHelp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ibConfig"
        app:layout_constraintTop_toTopOf="@+id/ibConfig"
        app:srcCompat="@drawable/bt_like" />

    <ImageButton
        android:id="@+id/ibHelp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ibLike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ibLike"
        app:layout_constraintTop_toTopOf="@+id/ibLike"
        app:srcCompat="@drawable/bt_help" />

    <Button
        android:id="@+id/btBorrarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/borrar_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/tvInformacionCuenta"
        app:layout_constraintEnd_toStartOf="@+id/btHistorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/historial"
        app:layout_constraintBottom_toBottomOf="@+id/btBorrarCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btBorrarCuenta"
        app:layout_constraintTop_toTopOf="@+id/btBorrarCuenta" />

    <TextView
        android:id="@+id/tvInformacionCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_cuenta"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBorrarCuenta"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/tvInformacionGPS"
        app:layout_constraintEnd_toEndOf="@+id/btHistorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btBorrarCuenta"
        app:layout_constraintTop_toBottomOf="@+id/tvInformacionCuenta">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_alejandra"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tbOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvActualizaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/actualizaciones"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvInformacionGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_gps"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/btPantallaAyuda"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvInformacionGPS"
       >

        <RadioButton
            android:id="@+id/rb30minutos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rb_treinta_minutos"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/rb10minutos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb10minutos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:text="@string/rb_diez_minutos"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/rb30minutos"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBateriaLLena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="@+id/rb30minutos"
            app:layout_constraintStart_toStartOf="@+id/rb30minutos"
            app:layout_constraintTop_toBottomOf="@+id/rb30minutos"
            app:srcCompat="@drawable/bateria_casi_llena" />

        <ImageView
            android:id="@+id/ivBateriaBaja"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/ivBateriaLLena"
            app:layout_constraintEnd_toEndOf="@+id/rb10minutos"
            app:layout_constraintStart_toStartOf="@+id/rb10minutos"
            app:layout_constraintTop_toTopOf="@+id/ivBateriaLLena"
            app:srcCompat="@drawable/bateria_baja" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btPantallaAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pantalla_ayuda"
        app:layout_constraintBottom_toTopOf="@+id/ibConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>